@@ -33,7 +33,7 @@ urlpatterns = [
 
 if settings.DEBUG:
     from django.conf.urls.static import static as static2 
-    print(settings.MEDIA_URL, settings.MEDIA_ROOT)
+    print("DEBUG mode:", settings.MEDIA_URL, settings.MEDIA_ROOT)
     urlpatterns += static2(settings.MEDIA_URL,
                            document_root=settings.MEDIA_ROOT)
 
