@@ -1,3 +1,13 @@
+15-November-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
+ * api-client/api.py:
+ * backend-django/DjangoClarin/urls.py:
+ * backend-django/clarin_backend/models.py:
+ * backend-django/clarin_backend/sql_views.py:
+ * backend-django/clarin_backend/urls.py:
+ * backend-django/clarin_backend/utils.py:
+ * backend-django/clarin_backend/views.py: Added support for querying shared
+ collection information ("api/shared").
+
 29-October-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
  * clarin-angular/package.json: Updated version to 3.3.0. (Audio/Video
  Annotation).
